deployments/kubernetes/base/review_detail/review_detail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-detail
  namespace: payment-gateway
spec:
  selector:
    app: review-detail
  ports:
    - name: http-metrics
      port: 8099
      targetPort: 8099
    - name: grpc
      port: 50069
      targetPort: 50069
  type: ClusterIP
